<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />


    <LinearLayout
        android:id="@+id/activity_settings_ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:paddingStart="@dimen/item_h_margin"
                android:paddingLeft="@dimen/item_h_margin"
                android:paddingEnd="@dimen/item_h_margin"
                android:paddingRight="@dimen/item_h_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_settings_input_layout_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/item_v_margin"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_settings_et_url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:hint="@string/url_hint"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_settings_input_layout_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_settings_et_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_settings_input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_settings_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_settings_input_layout_interviewer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyAppTheme.TextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/activity_settings_et_interviewer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/interviewer"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_normal" />
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/activity_settings_btn_exchange"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/btn_padding"
            android:paddingRight="@dimen/btn_padding"
            android:text="@string/exchange"
            android:textColor="@color/colorTextAccent"
            android:textSize="@dimen/text_size_normal" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/activity_settings_progress_bar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/progress_bar_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/text_size_small"
        android:gravity="center"
        android:visibility="gone"
        android:layout_below="@+id/activity_settings_progress_bar"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:text="loading..."
        />

    <include
        layout="@layout/view_shadow"
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_below="@+id/tool_bar" />


</RelativeLayout>